# ComfyUI_Eugene_Nodes

./: LICENSE  Readme.md  __init__.py  pyproject.toml
examples/: Sci-fi_Enviroments_preset.json
js/: preset_selector.js
nodes/: dictionary_bus.py  dictionary_nodes.py  remote_executor.py
nodes/lora_nodes/: __init__.py  helper.py  loader_nodes.py  preset_nodes.py  web.py
workflows/: DictionaryExample.json  PresetExample.json  PresetLoraExample.json
